--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Aditya",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "vercel": "^34.2.6"
   }
 }
