--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "fs": "^0.0.1-security",
-    "nodemon": "^3.1.3",
-    "vercel": "^34.2.6"
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
